Cleaning up the repo a bit

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SPOTIFYID=$SPOTIFYID
+REACT_APP_SPOTIFYID="your_token_goes_here"
+REACT_APP_SPOTIFYREURL="https://jammming.stufftronics.com"
