--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^7.2.1",
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
-    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3"
   },
@@ -32,5 +31,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
